# prefiq-cli-py

./: README.md  cli.py  pyproject.toml  setup-v1.bat  setup-v1.sh  setup.cfg  setup.py
docs/: setup guide.md
src/prefiq/: add_to_path.py  create_superuser.py  main.py
