[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prefiq-cli-py"
version = "0.1.0"
description = "Prefiq CLI – A simple Django setup tool"
authors = [{ name = "Sundar" }]
readme = "README.md"

[project.scripts]
prefiq = "prefiq.main:main"

[tool.setuptools.packages.find]
where = ["src"]
